--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style id="windowInfo">
+      :root{
+        --winWidth:1920;
+        --winHeight:1080;
+      }
+    </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -39,5 +45,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      const styleElement = document.querySelector('style#windowInfo')
+      window.onresize = () => {
+        styleElement.innerHTML = `
+        :root{
+          --winHeight:${window.innerHeight}px;
+          --winWidth:${window.innerWidth}px;
+        }
+        `
+      }
+      window.onresize();
+    </script>
   </body>
 </html>
